--- a/assignment1/AIMD Tuning.ipynb
+++ b/assignment1/AIMD Tuning.ipynb
@@ -152,7 +152,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## When there are 2 Users"
+    "## When number of TCP Users/ Flows = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 1: Constant Alpha, Constant Beta"
    ]
   },
   {
@@ -301,6 +308,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 2: Log Alpha, Constant Beta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
@@ -442,6 +456,13 @@
     "\n",
     "e2 = TuningAIMD(num_users=2, initial_cwnd=(2,6))\n",
     "e2.run_simulation(alpha=1, beta=0.5, alpha_setting='log-incr', max_iteration=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 3: Exp Alpha, Constant Beta"
    ]
   },
   {
@@ -589,6 +610,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 4: Sigmoid Alpha, Constant Beta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 132,
    "metadata": {},
@@ -730,6 +758,13 @@
     "\n",
     "e4 = TuningAIMD(num_users=2, initial_cwnd=(2,6))\n",
     "e4.run_simulation(alpha=1, beta=0.5, alpha_setting='sigmoid-incr', max_iteration=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 5: Sigmoid Alpha, Constant Beta - Alternative Initial cwnd values"
    ]
   },
   {
@@ -877,6 +912,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 6: Constant Alpha, Window-size Beta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
@@ -1018,6 +1060,13 @@
     "\n",
     "e6 = TuningAIMD(num_users=2, initial_cwnd=(2,6))\n",
     "e6.run_simulation(alpha=1, beta=0.5, beta_setting='cwnd-decr', max_iteration=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 7: Constant Alpha, Inverse-Sigmoid Beta"
    ]
   },
   {
@@ -1165,6 +1214,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 8: Sigmoid Alpha (scale=0.05, shift=5), Inverse-Sigmoid Beta (slope = 0.1, midpt=10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 151,
    "metadata": {},
@@ -1306,6 +1362,13 @@
     "\n",
     "e8 = TuningAIMD(num_users=2, initial_cwnd=(2,6))\n",
     "e8.run_simulation(alpha=1, beta=0.5, alpha_setting='sigmoid-incr', beta_setting='inv-sigmoid-decr', max_iteration=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 9: Sigmoid Alpha (scale=0.01, shift=3), Inverse-Sigmoid Beta (slope = 0.1, midpt=10)"
    ]
   },
   {
@@ -1453,6 +1516,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 10: Sigmoid Alpha (scale=0.05, shift=5), Inverse-Sigmoid Beta (slope = 0.4, midpt=15)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
@@ -1597,6 +1667,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## When number of TCP Users/ Flows = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 11: Sigmoid Alpha (scale=0.05, shift=5), Inverse-Sigmoid Beta (slope = 0.1, midpt=15)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
@@ -1736,6 +1820,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 12: Constant Alpha, Constant Beta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 179,
    "metadata": {},
@@ -1870,8 +1961,22 @@
     "# 5 users\n",
     "\n",
     "seed(1)\n",
-    "e11 = TuningAIMD(num_users=5, capacity=100)\n",
-    "e11.run_simulation(alpha=2, beta=0.7, alpha_setting='constant', beta_setting='constant', max_iteration=100)"
+    "e12 = TuningAIMD(num_users=5, capacity=100)\n",
+    "e12.run_simulation(alpha=2, beta=0.7, alpha_setting='constant', beta_setting='constant', max_iteration=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## When number of TCP Users/ Flows = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 13: Sigmoid Alpha (scale=0.05, shift=5), Inverse-Sigmoid Beta (slope = 0.1, midpt=15)"
    ]
   },
   {
@@ -2014,8 +2119,8 @@
     "# 10 users\n",
     "\n",
     "seed(1)\n",
-    "e12 = TuningAIMD(num_users=10, capacity=100)\n",
-    "e12.run_simulation(alpha=2, beta=0.7, alpha_setting='sigmoid-incr', beta_setting='inv-sigmoid-decr', beta_inv_sigmoid_midpt=15, max_iteration=100)"
+    "e13 = TuningAIMD(num_users=10, capacity=100)\n",
+    "e13.run_simulation(alpha=2, beta=0.7, alpha_setting='sigmoid-incr', beta_setting='inv-sigmoid-decr', beta_inv_sigmoid_midpt=15, max_iteration=100)"
    ]
   },
   {
